unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/ccpe_r__Retainer_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This object is used for the retainers line items that are created based on business logic such as spend and time period and are then drawn down on by the customer</description>
    <label>Retainer Line Item</label>
    <nameField>
        <displayFormat>RL{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retainer Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>