unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Current_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Current_Hours__c</fullName>
    <description>The running total of how many hours the client has used in the time period</description>
    <label>Current Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>