unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Current_Spend__c</fullName>
    <description>The running total of how much spend the client has had in the time period</description>
    <label>Current Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>