unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Hours_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hours_Balance_Remaining__c</fullName>
    <formula>ccpe_r__Line_Item_Total_Hours__c - ccpe_r__Current_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>