unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Hours_From_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hours_From_Criteria__c</fullName>
    <description>The retainer hours taken from the client account at the start of the time period</description>
    <label>Hours From Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>