unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Line_Item_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Line_Item_Criteria__c</fullName>
    <description>The line item criteria record this line item was generated from</description>
    <label>Line Item Criteria</label>
    <referenceTo>ccpe_r__Line_Item_Criteria__c</referenceTo>
    <relationshipLabel>Retainer Line Items</relationshipLabel>
    <relationshipName>Retainer_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>