unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Line_Item_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Line_Item_Total_Hours__c</fullName>
    <description>The total amount of retainer hours available for the time period including any rolled over hours</description>
    <formula>ccpe_r__Hours_From_Criteria__c + ccpe_r__Rolled_Over_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>