unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Line_Item_Total_Spend__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Line_Item_Total_Spend__c</fullName>
    <description>The total amount of the retainer available for the time period including any rolled over amounts</description>
    <formula>ccpe_r__Spend_From_Criteria__c + ccpe_r__Rolled_Over_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>