unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Previous_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Previous_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Line Item from which this was rolled over</description>
    <label>Previous Line Item</label>
    <referenceTo>ccpe_r__Retainer_Line_Item__c</referenceTo>
    <relationshipLabel>Retainer Line Items</relationshipLabel>
    <relationshipName>Retainer_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>