unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Retainer__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Retainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The retainer that the line item is related to</description>
    <label>Retainer</label>
    <referenceTo>ccpe_r__Retainer__c</referenceTo>
    <relationshipLabel>Retainer Line Items</relationshipLabel>
    <relationshipName>Retainer_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>