unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Rolled_Over_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rolled_Over_Hours__c</fullName>
    <description>The hours of retainer rolled over from the previous time period if any</description>
    <label>Rolled Over Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>