unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Rolled_Over_Spend__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rolled_Over_Spend__c</fullName>
    <description>The amount of retainer rolled over from the previous time period if any</description>
    <label>Rolled Over Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>