unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Spend_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Spend_Balance_Remaining__c</fullName>
    <formula>ccpe_r__Line_Item_Total_Spend__c -  ccpe_r__Current_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>