unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Spend_From_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Spend_From_Criteria__c</fullName>
    <description>The amount taken from the line item criteria at the start of the time period</description>
    <label>Spend From Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>