unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/fields/ccpe_r__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Start_Date__c</fullName>
    <description>The date signifies the start date of the retainer line item record, this is recommended to be set to the first day of the week, month or quarter</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>