unpackaged/main/default/objects/ccpe_r__Retainer_Line_Item__c/validationRules/ccpe_r__Cannot_Reference_Self.validationRule-meta.xml
<ValidationRule>
    <fullName>ccpe_r__Cannot_Reference_Self</fullName>
    <active>true</active>
    <description>Line Items cannot reference themselves</description>
    <errorConditionFormula>ccpe_r__Previous_Line_Item__c == Id &amp;&amp; Id != null</errorConditionFormula>
    <errorDisplayField>ccpe_r__Previous_Line_Item__c</errorDisplayField>
    <errorMessage>A Line Item cannot reference itself as the previous Line Item</errorMessage>
</ValidationRule>